<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dbz_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/how_well_do_you_know_about_goku_let_s_begin_the_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="Name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text_view" />

    <TextView
        android:id="@+id/question_1_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q1_who_is_goku_fighting_when_he_first_goes_super_saiyan_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_1_text_view">

        <RadioButton
            android:id="@+id/rb1"
            style="@style/RadioButtonStyle"
            android:text="@string/majin_vegeta"/>

        <RadioButton
            android:id="@+id/rb2"
            style="@style/RadioButtonStyle"
            android:text="@string/cell" />

        <RadioButton
            android:id="@+id/rb3"
            style="@style/RadioButtonStyle"
            android:text="@string/yakon" />

        <RadioButton
            android:id="@+id/rb4"
            style="@style/RadioButtonStyle"
            android:text="@string/kid_buu"/>
    </RadioGroup>

    <TextView
        android:id="@+id/question_2_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q2_what_new_technique_was_taught_to_goku_when_he_was_on_planet_yardat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg1" />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_2_text_view">

        <RadioButton
            android:id="@+id/rb5"
            style="@style/RadioButtonStyle"
            android:text="@string/instantaneous_movement" />

        <RadioButton
            android:id="@+id/rb6"
            style="@style/RadioButtonStyle"
            android:text="@string/instant_transmission" />

        <RadioButton
            android:id="@+id/rb7"
            style="@style/RadioButtonStyle"
            android:text="@string/fusion" />

        <RadioButton
            android:id="@+id/rb8"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_3_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q3_who_was_goku_battling_when_he_first_became_a_super_saiyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg2" />

    <RadioGroup
        android:id="@+id/rg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_3_text_view">

        <RadioButton
            android:id="@+id/rb9"
            style="@style/RadioButtonStyle"
            android:text="@string/captain_ginyu" />

        <RadioButton
            android:id="@+id/rb10"
            style="@style/RadioButtonStyle"
            android:text="@string/android_19" />

        <RadioButton
            android:id="@+id/rb11"
            style="@style/RadioButtonStyle"
            android:text="@string/frieza" />

        <RadioButton
            android:id="@+id/rb12"
            style="@style/RadioButtonStyle"
            android:text="@string/lord_slug" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_4_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q4_who_was_the_first_villain_that_goku_defeated_on_namek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg3" />

    <RadioGroup
        android:id="@+id/rg4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_4_text_view">

        <RadioButton
            android:id="@+id/rb13"
            style="@style/RadioButtonStyle"
            android:text="@string/recoome" />

        <RadioButton
            android:id="@+id/rb14"
            style="@style/RadioButtonStyle"
            android:text="@string/broly" />

        <RadioButton
            android:id="@+id/rb15"
            style="@style/RadioButtonStyle"
            android:text="@string/burter" />

        <RadioButton
            android:id="@+id/rb16"
            style="@style/RadioButtonStyle"
            android:text="@string/guldo" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_5_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q5_who_kills_goku_for_the_first_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg4" />

    <RadioGroup
        android:id="@+id/rg5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_5_text_view">

        <RadioButton
            android:id="@+id/rb17"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piccolo" />

        <RadioButton
            android:id="@+id/rb18"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krillin" />

        <RadioButton
            android:id="@+id/rb19"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tien_shinhan" />

        <RadioButton
            android:id="@+id/rb20"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/king_chappa" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_6_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q6_in_the_21st_world_martial_arts_tournament_who_beats_goku_in_the_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg5" />

    <RadioGroup
        android:id="@+id/rg6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_6_text_view">

        <RadioButton
            android:id="@+id/rb21"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nam" />

        <RadioButton
            android:id="@+id/rb22"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chiaotzu" />

        <RadioButton
            android:id="@+id/rb23"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jackie_chun" />

        <RadioButton
            android:id="@+id/rb24"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yamcha" />
    </RadioGroup>

    <TextView
        android:id="@+id/question_7_text_view"
        style="@style/FontTheme"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/q7_what_s_the_first_energy_technique_that_goku_ever_learns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg6" />

    <RadioGroup
        android:id="@+id/rg7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_7_text_view">

        <RadioButton
            android:id="@+id/rb25"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kamehameha" />

        <RadioButton
            android:id="@+id/rb26"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spirit_bomb" />
        <RadioButton
            android:id="@+id/rb27"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaio_ken" />
        <RadioButton
            android:id="@+id/rb28"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galick_gun" />
    </RadioGroup>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:onClick="sumbitAnswers"
        android:text="@string/submit_answers"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg7" />

</android.support.constraint.ConstraintLayout>
</ScrollView>